--- a/desktop/package.json
+++ b/desktop/package.json
@@ -24,9 +24,7 @@
         "package:mac": "yarn run package --mac",
         "package:linux": "yarn run package --linux",
         "package:win": "yarn run package --win --x64",
-        "package:all": "yarn run package -mwl",
-        "package:test": "yarn run package --linux",
-        "release": "yarn run package:all --publish always"
+        "package:all": "yarn run package -mwl"
     },
     "build": {
         "productName": "Freedcamp",
