--- a/web/package.json
+++ b/web/package.json
@@ -6,15 +6,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
-  "devDependencies": {
-    "react-app-rewire-yarn-workspaces": "^1.0.2",
-    "react-app-rewired": "^1.3.5",
-    "react-scripts": "1.0.17"
-  },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "parcel public/index.html",
+    "build": "parcel build public/index.html"
   }
 }
